--- a/.github/workflows/Daily_Commit.yaml
+++ b/.github/workflows/Daily_Commit.yaml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '05 01 * * *'
+    - cron: '10 01 * * *'
 
 jobs:
   daily-commit:
@@ -24,4 +24,6 @@ jobs:
           git commit -m "Daily commit"
 
       - name: Push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: git push origin main
