--- a/.github/workflows/Daily_Commit.yaml
+++ b/.github/workflows/Daily_Commit.yaml
@@ -2,7 +2,7 @@ name: Daily Commit
 
 on:
   schedule:
-    - cron: '10 01 * * *'
+    - cron: '15 01 * * *'  # Runs daily at 18:25 IST (12:55 UTC)
 
 jobs:
   daily-commit:
@@ -21,9 +21,10 @@ jobs:
           git config --local user.email "22f3002277@ds.study.iitm.ac.in"
           git config --local user.name "brilo1819"
           git add daily_commit.txt
-          git commit -m "Daily commit"
+          git diff --cached --exit-code || git commit -m "Daily commit"
 
       - name: Push changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: git push origin main
+        run: |
+          git push https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }} HEAD:${{ github.ref }}
